--- a/Backend/MasterFind/WebApi/appsettings.json
+++ b/Backend/MasterFind/WebApi/appsettings.json
@@ -17,7 +17,7 @@
 
     },
     "AI": {
-        "OpenRouterApiKey": "apikey",
+        "OpenRouterApiKey": "fdgsdfgsdf",
         "Model": "google/gemma-3-27b-it:free"
     }
 }
